xfsprogs-2.5.4 (23 July 2003)
	- Update xfs_io bmap command to report unwritten extent flag
	  if it is set on an extent (in verbose mode only).
	- Introducing xfs_copy.
	- Fix shell quoting problem in xfs_bmap script.

xfsprogs-2.5.3 (07 July 2003)
	- Update xfs_io commands which take user input in terms of
	  byte counts to now also allow unit prefixes like mkfs.xfs.
	- Tweak build to avoid unnecessary rebuilds of international
	  language files (if present), suggested by Steve Langasek.
	- Fix usage message in mkfs.xfs, it was out of date.
	- Fix some filesystem type detection code, in particular the
	  bfs probe code was broken for 64 bit machines (found by QA
	  test 032) and the hfs code was broken too (originally found
	  by Ethan Benson).  We now also detect hfs+ filesystems.

xfsprogs-2.5.2 (25 June 2003)
	- Fix xvm stripe detection in libdisk - pass correctly
	  sized structures to xvm ioctls.
	- Add pthread library checks into configure and build scripts
	  for work-in-progress on xfs_repair and xfs_copy.
	- Fix missing initialisation of stripe unit/width alignment
	  information during libxfs_mount.
	- Fix botched repair typecast for multi-terabyte filesystems.

xfsprogs-2.5.1 (23 June 2003)
	- Fix libdisk device driver (volume managers) detection code
	  used by mkfs, so that drivers with multiple majors are not
	  incorrectly processed.

xfsprogs-2.5.0 (18 June 2003)
	- Fix libdisk (and hence mkfs) code which warns on MD devices
	  with the clean flag not set, apparently this is not so wise.
	- Fix libxfs_device_zero to work with smaller-than-requested
	  write return values.
	- Fix error in xfs_io pwrite code with large request sizes.
	- Fix rounding-down-input problems in several xfs_io commands.
	- Changed mkfs.xfs default log size scaling algorithm slightly,
	  to create larger logs at smaller filesystem sizes by default
	  (thanks to Andi Kleen for the patch).
	- Enable support for sector sizes larger than 512 bytes.
